==> kpierzynski/AVR_alarm_clock/protocols/i2c.c <==
#include "i2c.h"

void i2c_init( uint16_t freq ) {
	uint8_t div = ( ( F_CPU / 1000L ) / freq );
	if ( div >= 16 )
		div = ( div - 16 ) / 2;
	TWBR = div;
}

void i2c_start( void ) {
	TWCR = ( 1 << TWINT ) | ( 1 << TWEN ) | ( 1 << TWSTA );
	while ( !( TWCR & ( 1 << TWINT ) ) )
		;
}

void i2c_stop( void ) {
	TWCR = ( 1 << TWINT ) | ( 1 << TWEN ) | ( 1 << TWSTO );
	while ( ( TWCR & ( 1 << TWSTO ) ) )
		;
}

void i2c_write( uint8_t bajt ) {
	TWDR = bajt;
	TWCR = ( 1 << TWINT ) | ( 1 << TWEN );
	while ( !( TWCR & ( 1 << TWINT ) ) )
		;
}

uint8_t i2c_read( uint8_t ack ) {
	TWCR = ( 1 << TWINT ) | ( ack << TWEA ) | ( 1 << TWEN );
	while ( !( TWCR & ( 1 << TWINT ) ) )
		;
	return TWDR;
}
